[gd_scene load_steps=15 format=3 uid="uid://bk0rktcj3tmw0"]

[ext_resource type="Script" path="res://gameBoardSimulationLayer.gd" id="1_skvli"]
[ext_resource type="Script" path="res://gameplay.gd" id="1_y6e7o"]
[ext_resource type="Script" path="res://boardTile.gd" id="2_ce2kd"]
[ext_resource type="Script" path="res://displayStone.gd" id="3_3ual2"]
[ext_resource type="Script" path="res://boardVisual.gd" id="4_xkmsq"]
[ext_resource type="Script" path="res://cursorStone.gd" id="6_d1aaq"]
[ext_resource type="Script" path="res://stoneBin.gd" id="6_p10hp"]

[sub_resource type="SphereMesh" id="SphereMesh_j1fj2"]
radius = 13.0
height = 26.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hgsmh"]
bg_color = Color(0.556863, 0, 0, 1)
corner_radius_top_left = 9
corner_radius_top_right = 9
corner_radius_bottom_right = 9
corner_radius_bottom_left = 9

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2k3cc"]
bg_color = Color(0.2, 0.356863, 1, 1)
corner_radius_top_left = 9
corner_radius_top_right = 9
corner_radius_bottom_right = 9
corner_radius_bottom_left = 9

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5w2du"]
bg_color = Color(0, 0.721569, 0.490196, 1)
corner_radius_top_left = 9
corner_radius_top_right = 9
corner_radius_bottom_right = 9
corner_radius_bottom_left = 9

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w670g"]
bg_color = Color(0.843137, 0.686275, 0, 1)
corner_radius_top_left = 9
corner_radius_top_right = 9
corner_radius_bottom_right = 9
corner_radius_bottom_left = 9

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rtbt3"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 9
corner_radius_top_right = 9
corner_radius_bottom_right = 9
corner_radius_bottom_left = 9

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5pvu7"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 9
corner_radius_top_right = 9
corner_radius_bottom_right = 9
corner_radius_bottom_left = 9

[node name="testing" type="Node2D"]
script = ExtResource("1_y6e7o")

[node name="gameBoardSimulationLayer" type="Node" parent="."]
script = ExtResource("1_skvli")

[node name="boardTile" type="Button" parent="."]
custom_minimum_size = Vector2(50, 50)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -123.0
offset_top = 27.0
offset_right = -73.0
offset_bottom = 77.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_ce2kd")
metadata/_edit_use_anchors_ = true

[node name="prototypeStone" type="MeshInstance2D" parent="boardTile"]
visible = false
position = Vector2(25.2579, 25.25)
scale = Vector2(1.62628, 1.625)
mesh = SubResource("SphereMesh_j1fj2")
script = ExtResource("3_3ual2")

[node name="boardVisual" type="GridContainer" parent="."]
custom_minimum_size = Vector2(1045, 1045)
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 489.0
offset_top = 38.0
offset_right = 1489.0
offset_bottom = 1038.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 19
script = ExtResource("4_xkmsq")

[node name="playerStoneBins" type="VBoxContainer" parent="."]
offset_left = 20.0
offset_top = 19.0
offset_right = 290.0
offset_bottom = 1068.0

[node name="ScoreTracker" type="Button" parent="playerStoneBins"]
layout_mode = 2
text = "SCORE: 0"

[node name="RedBin" type="Button" parent="playerStoneBins"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_hgsmh")
text = "RED: 10"
script = ExtResource("6_p10hp")

[node name="BlueBin" type="Button" parent="playerStoneBins"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_2k3cc")
text = "BLUE: 10"
script = ExtResource("6_p10hp")
colorName = "B"
displayColorName = "BLUE"

[node name="GreenBin" type="Button" parent="playerStoneBins"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_5w2du")
text = "GREEN: 10"
script = ExtResource("6_p10hp")
colorName = "G"
displayColorName = "GREEN"

[node name="YellowBin" type="Button" parent="playerStoneBins"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_w670g")
text = "YELLOW: 10"
script = ExtResource("6_p10hp")
colorName = "Y"
displayColorName = "YELLOW"

[node name="WhiteBin" type="Button" parent="playerStoneBins"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_rtbt3")
text = "WHITE: 10"
script = ExtResource("6_p10hp")
colorName = "W"
displayColorName = "WHITE"

[node name="BlackBin" type="Button" parent="playerStoneBins"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_5pvu7")
text = "BLACK: 3"
script = ExtResource("6_p10hp")
colorName = "X"
displayColorName = "BLACK"
amnt = 5

[node name="opponentStoneBins" type="VBoxContainer" parent="."]
offset_left = 1630.0
offset_top = 19.0
offset_right = 1900.0
offset_bottom = 1068.0

[node name="ScoreTracker" type="Button" parent="opponentStoneBins"]
layout_mode = 2
text = "SCORE: 0"

[node name="RedBin" type="Button" parent="opponentStoneBins"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_hgsmh")
text = "RED: 10"
script = ExtResource("6_p10hp")

[node name="BlueBin" type="Button" parent="opponentStoneBins"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_2k3cc")
text = "BLUE: 10"
script = ExtResource("6_p10hp")
colorName = "B"
displayColorName = "BLUE"

[node name="GreenBin" type="Button" parent="opponentStoneBins"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_5w2du")
text = "GREEN: 10"
script = ExtResource("6_p10hp")
colorName = "G"
displayColorName = "GREEN"

[node name="YellowBin" type="Button" parent="opponentStoneBins"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_w670g")
text = "YELLOW: 10"
script = ExtResource("6_p10hp")
colorName = "Y"
displayColorName = "YELLOW"

[node name="WhiteBin" type="Button" parent="opponentStoneBins"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_rtbt3")
text = "WHITE: 10"
script = ExtResource("6_p10hp")
colorName = "W"
displayColorName = "WHITE"

[node name="BlackBin" type="Button" parent="opponentStoneBins"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_5pvu7")
text = "BLACK: 3"
script = ExtResource("6_p10hp")
colorName = "X"
displayColorName = "BLACK"
amnt = 5

[node name="cursorStone" type="MeshInstance2D" parent="."]
modulate = Color(1, 1, 1, 0.403922)
position = Vector2(1032, 433)
scale = Vector2(1.62628, 1.625)
mesh = SubResource("SphereMesh_j1fj2")
script = ExtResource("6_d1aaq")

[connection signal="focus_entered" from="boardTile" to="boardTile" method="_on_focus_entered"]
[connection signal="focus_exited" from="boardTile" to="boardTile" method="_on_focus_exited"]
[connection signal="pressed" from="boardTile" to="boardTile" method="_on_pressed"]
[connection signal="mouse_entered" from="boardVisual" to="cursorStone" method="_on_board_visual_mouse_entered"]
[connection signal="mouse_exited" from="boardVisual" to="cursorStone" method="_on_board_visual_mouse_exited"]
[connection signal="pressed" from="playerStoneBins/RedBin" to="." method="_on_red_bin_pressed"]
[connection signal="pressed" from="playerStoneBins/BlueBin" to="." method="_on_blue_bin_pressed"]
[connection signal="pressed" from="playerStoneBins/GreenBin" to="." method="_on_green_bin_pressed"]
[connection signal="pressed" from="playerStoneBins/YellowBin" to="." method="_on_yellow_bin_pressed"]
[connection signal="pressed" from="playerStoneBins/WhiteBin" to="." method="_on_white_bin_pressed"]
[connection signal="pressed" from="playerStoneBins/BlackBin" to="." method="_on_black_bin_pressed"]
[connection signal="pressed" from="opponentStoneBins/RedBin" to="." method="_on_red_bin_pressed"]
[connection signal="pressed" from="opponentStoneBins/BlueBin" to="." method="_on_blue_bin_pressed"]
[connection signal="pressed" from="opponentStoneBins/GreenBin" to="." method="_on_green_bin_pressed"]
[connection signal="pressed" from="opponentStoneBins/YellowBin" to="." method="_on_yellow_bin_pressed"]
[connection signal="pressed" from="opponentStoneBins/WhiteBin" to="." method="_on_white_bin_pressed"]
[connection signal="pressed" from="opponentStoneBins/BlackBin" to="." method="_on_black_bin_pressed"]
